spec/AERIS_Grammar.ebnf
program         = { item } ;
item            = module_decl | use_decl | effect_decl | cap_decl | type_decl | actor_decl | fn_decl ;

module_decl     = "module" path ";" ;
use_decl        = "use" path [ "as" ident ] ";" ;
effect_decl     = "effect" ident ";" ;
cap_decl        = "cap" ident ";" ;

type_decl       = "type" ident [ generic_params ] "=" variant { "|" variant } ";" ;
variant         = ident [ "(" field { "," field } ")" ] ;
field           = ident ":" type_expr ;

actor_decl      = "actor" ident "(" [ params ] ")" "{" { handler } "}" ;
handler         = "on" pattern "=>" block ;

fn_decl         = "fn" ident [ generic_params ] "(" [ params ] ")" "->" type_expr "!" ident [ "where" expr ] block ;
params          = param { "," param } ;
param           = ident ":" type_expr [ "where" expr ] ;
generic_params  = "<" ident { "," ident } ">" ;

block           = "{" { stmt } [ expr ] "}" ;
stmt            = let_stmt | mut_stmt | require_stmt | return_stmt | expr_stmt ;
let_stmt        = "let" ident [ "=" expr ] ";" ;
mut_stmt        = "mut" ident "=" expr ";" ;
require_stmt    = "require" expr [ "," string ] ";" ;
return_stmt     = "return" expr ";" ;
expr_stmt       = expr ";" ;

expr            = lambda | match_expr | if_expr | logic_or ;
lambda          = "|" [ ident { "," ident } ] "|" expr ;
match_expr      = "match" expr "{" { match_arm } "}" ;
match_arm       = pattern "=>" block [ "," ] ;
if_expr         = "if" expr block [ "else" block ] ;

logic_or        = logic_and { "||" logic_and } ;
logic_and       = equality { "&&" equality } ;
equality        = comparison { ( "==" | "!=" ) comparison } ;
comparison      = term { ( "<" | "<=" | ">" | ">=" ) term } ;
term            = factor { ( "+" | "-" ) factor } ;
factor          = unary { ( "*" | "/" | "%" ) unary } ;
unary           = [ "-" | "!" ] call ;
call            = primary { "(" [ expr { "," expr } ] ")" } ;
primary         = ident | int | string | "true" | "false" | "(" expr ")" ;

pattern         = "_" | ident [ "(" [ ident { "," ident } ] ")" ] | int | string | "true" | "false" ;
type_expr       = ident [ "<" type_expr { "," type_expr } ">" ] ;
path            = ident { "." ident } ;
ident           = ? ASCII identifier ? ;
int             = ? decimal integer ? ;
string          = ? quoted string literal ? ;
